Report error if a non-integer was given for number of old versions to keep.

--- a/src/main/resources/hockeyapp/Messages.properties
+++ b/src/main/resources/hockeyapp/Messages.properties
@@ -6,6 +6,6 @@ HOCKEYAPP_INSTALL_LINK=HockeyApp Install Link
 HOCKEYAPP_CONFIG_LINK=HockeyApp Configuration Link
 ABORTING_CLEANUP=Aborting cleanup.
 APP_ID_MISSING_FOR_CLEANUP=No App ID has been specified; cannot clean up old versions.
-COUNT_MISSING_FOR_CLEANUP=No number of old versions to keep has been specified!
+COUNT_MISSING_FOR_CLEANUP=No valid number of old versions to keep has been specified!
 TOO_FEW_VERSIONS_RETAINED=You need to keep at least one version!
 DELETED_OLD_VERSIONS=Successfully deleted {0} old versions.
