Add support for multiple applications

--- a/src/main/resources/hockeyapp/Messages.properties
+++ b/src/main/resources/hockeyapp/Messages.properties
@@ -9,3 +9,4 @@ APP_ID_MISSING_FOR_CLEANUP=No App ID has been specified; cannot clean up old ver
 COUNT_MISSING_FOR_CLEANUP=No valid number of old versions to keep has been specified!
 TOO_FEW_VERSIONS_RETAINED=You need to keep at least one version!
 DELETED_OLD_VERSIONS=Successfully deleted {0} old versions.
+APPLICATION=Application
